# dunececalib

./: CMakeLists.txt  README.md  build  setup.sh
Data/: CMakeLists.txt  calibTemplateFemb.fcl  calibTemplateIceberg.fcl  calibTemplatePdsp.fcl
Fcl/: CMakeLists.txt  addCalibRois.fcl  calibRoiFitter.fcl  roifitpos100.fcl  showRoiSums.fcl
Fcl/Iceberg/: CMakeLists.txt  ibRunCalib.fcl
Fcl/Protodune/: CMakeLists.txt  pdspRunCalib.fcl
Root/: CMakeLists.txt  ExtraDataset.h  calib.C  calplots.C  doCalib.C  drawGainDist.C  qstep.C
Root/Iceberg/: CMakeLists.txt  icebergCalib.C  makeIcebergCalibData.C
Root/Protodune/: CMakeLists.txt  makePdspCalibData.C  makePdspCalibData.D
Script/: CMakeLists.txt  doCalibIceberg  doCalibPdsp  dunececalibHelp  makeCalibFcl  makeCalibPdsp
Utility/: AdcCalibData.h  AdcCalibGraphs.cxx  AdcCalibGraphs.h  CMakeLists.txt  classes.h  classes_def.xml
doc/: exampleCalib.fcl  icebergCalibration.md  infiles.txt  pdspCalibration.md  procedure.md
doc/pdcalib-202007/: makeRunjobs  moveData  wcopy
fcl/: roifitneg100.fcl  roifitpos100.fcl
src/: AdcCalibGraphs.cxx  AdcCalibGraphs.h
